// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableTable should render with one dev 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <td>
        Id
      </td>
      <td>
        Name
      </td>
      <td>
        Action
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EditableTable should render with three devs 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <td>
        Id
      </td>
      <td>
        Name
      </td>
      <td>
        Action
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
    <tr>
      <td>
        3
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EditableTable should render with two devs 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <td>
        Id
      </td>
      <td>
        Name
      </td>
      <td>
        Action
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        <input
          onChange={[Function]}
          type="text"
          value="first"
        />
      </td>
      <td>
        <button
          onClick={[Function]}
        >
          Details
        </button>
         
        <button
          onClick={[Function]}
        >
          Edit
        </button>
         
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`EditableTable should render with zero devs 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <td>
        Id
      </td>
      <td>
        Name
      </td>
      <td>
        Action
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="text-center"
        colSpan={3}
      >
        There are no devs.
      </td>
    </tr>
  </tbody>
</table>
`;
